Backend/manifest/Exp-Backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ext-backend
  labels:
    app: ext-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ext-backend
  template:
    metadata:
      labels:
        app: ext-backend
    spec:
      containers:
        - name: ext-frontend
          image: robadrinacr1.azurecr.io/ext-backend:latest
          ports:
            - containerPort: 3000
          imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: ext-backend-service
spec:
  selector:
    app: ext-backend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
